--- a/Grafik_Web/Views/Shared/_Layout.cshtml
+++ b/Grafik_Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li>
+                            <div class="dropdown show">
+                                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Manage My Absences
+                                </a>
+
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SubmitNewAbsenceRequest">Submit New Absence Request</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">View My Requests</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">View My Absences History</a>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
