--- a/Grafik_Web/Views/Home/SubmitNewAbsenceRequest.cshtml
+++ b/Grafik_Web/Views/Home/SubmitNewAbsenceRequest.cshtml
@@ -2,55 +2,70 @@
 @{
     ViewData["Title"] = "Submit New Absence Request";
 }
+<style type="text/css">.form-container {margin: 20px }</style>
 
-<h1>Submit a new absence request</h1>
-<br />
-<div class="col-10">
-    <div class="col-5 bg-secondary text-white d-inline-block">
-        <form>
-            <div class="form-group row">
-                <div class="col-6 d-inline-block text-center">
-                    <label for="absenceStartDate">Absence Start Date:</label>
-                    <input type="date" id="absenceStartDate" name="trip-start"
-                           value="2018-07-22"
-                           min="2018-01-01" max="2999-12-31">
-                </div>
-                <div class="col-6 d-inline-block text-center">
-                    <label for="absenceEndDate">Absence End Date:</label>
-                    <input type="date" id="absenceEndDate" name="trip-start"
-                           value="2018-07-22"
-                           min="2018-01-01" max="2999-12-31">
-                </div>
-            </div>
-            <div class="form-group row text-center">
-                <label for="absenceType" class="col-sm-12 col-form-label">Absence type</label>
-                <select class="custom-select col-sm-10" id="absenceType">
-                    <option selected>Choose...</option>
-                    <option value="1">Annual leave</option>
-                    <option value="2">On demand</option>
-                    <option value="3">Special Leave</option>
-                </select>
-            </div>
-            <div class="form-group row text-center">
-                <label for="absenceRequestComments" class="col-sm-12 col-form-label">Comments</label>
-                <input type="text" class="form-control" placeholder="Comments..." id="absenceRequestComments" aria-label="Comments" aria-describedby="basic-addon1">
-            </div>
-            <div class="form-group row text-center">
-                <div class="col-sm-6">
-                    <button type="reset" class="btn btn-primary">Clear</button>
-                </div>
-                <div class="col-sm-6 text-center">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-            </div>
-        </form>
+<div class="container">
+    <div class="text-center row">
+        <h1>Submit new absence request</h1>
     </div>
-    <div class="col-1 bg-secondary text-white d-inline-block text-center"></div>
-        <div class="col-5 bg-secondary text-white d-inline-block">
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="row">
+        <div class="col bg-secondary text-white rounded">
+            <div class="form-container">
+                <form>
+                    <div class="row form-group text-center">
+                        <div class="col-6 d-inline-block text-center">
+                            <label for="absenceStartDate">Absence Start Date</label>
+                            <input type="date" id="absenceStartDate">
+                        </div>
+                        <div class="col-6 d-inline-block text-center">
+                            <label for="absenceEndDate">Absence End Date</label>
+                            <input type="date" id="absenceEndDate">
+                        </div>
+                    </div>
+                    <div class="row form-group text-center justify-content-center">
+                        <label for="absenceType">Absence Type</label>
+                        <select class="custom-select col-11" id="absenceType">
+                            <option selected>Choose...</option>
+                            <option value="1">Annual leave</option>
+                            <option value="2">On demand</option>
+                            <option value="3">Special Leave</option>
+                        </select>
+                    </div>
+                    <div class="row form-group text-center justify-content-center">
+                        <label for="absenceComment">Comment</label>
+                        <input type="text" class="form-control col-11" placeholder="Comments..." id="absenceComment" aria-label="Comments" />
+                    </div>
+                    <div class="row form-group text-center justify-content-center">
+                        <div class="col">
+                            <button type="reset" class="btn btn-warning">Clear Form</button>
+                        </div>
+                        <div class="col">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col bg-light">
+            <div class="row">
+                <p>First bar</p>
+                <div class="progress-bar row" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="row">
+                <h1>Second bar</h1>
+            </div>
+            <div class="row">
+                <h1>Third bar</h1>
             </div>
         </div>
     </div>
+</div>
+@*
+    <div class="col-5 bg-secondary text-white d-inline-block">
+    <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    </div>
+    </div>*@
