--- a/Grafik_Web/Views/Shared/_Layout.cshtml
+++ b/Grafik_Web/Views/Shared/_Layout.cshtml
@@ -19,17 +19,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">My Schedule</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Calendar</a>
                         </li>
                         <li>
                             <div class="dropdown show">
                                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Manage My Absences
                                 </a>
-
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SubmitNewAbsenceRequest">Submit New Absence Request</a>
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">View My Requests</a>
