--- a/Grafik_Web/Views/AbsenceRequest/SubmitNewAbsenceRequest.cshtml
+++ b/Grafik_Web/Views/AbsenceRequest/SubmitNewAbsenceRequest.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Grafik_Web.Models.AbsenceRequests>
+﻿@model IEnumerable<Grafik_Web.Models.AbsenceRequest>
 @{
     ViewData["Title"] = "Submit New Absence Request";
 }
