--- a/Grafik_Web/Views/Shared/_Layout.cshtml
+++ b/Grafik_Web/Views/Shared/_Layout.cshtml
@@ -32,8 +32,8 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="AbsenceRequest" asp-action="SubmitNewAbsenceRequest">Submit New Absence Request</a>
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Timesheets" asp-action="Privacy">View My Requests</a>
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Timesheets" asp-action="Privacy">View My Absences History</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="AbsenceRequest" asp-action="ViewMyAbsenceRequests">View My Requests</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="AbsenceRequest" asp-action="ViewMyAbsences">View My Absences History</a>
                                 </div>
                             </div>
                         </li>
